# xian-tg-bot

./: AGENTS.md  README.md  config.py  constants.py  main.py  plugin.py  pm2.config.json  pyproject.toml  start.sh  utils.py  web.py
.github/workflows/: validate.yml
cfg/: global.cfg  global.json
plg/: README.md
plg/about/: about.py
plg/about/res/: about.html
plg/active/: active.py
plg/active/res/: select_active.sql
plg/address/: address.py
plg/address/cfg/: address.json
plg/admin/: admin.py
plg/all/: all.py
plg/all/cfg/: all.json
plg/all/res/: select_users.sql
plg/api/: api.py
plg/api/res/: select_address.sql
plg/approve/: approve.py
plg/approve/cfg/: approve.cfg
plg/approve/res/: approve.html
plg/backup/: backup.py
plg/balance/: balance.py
plg/balance/cfg/: balance.json
plg/bless/: bless.py
plg/bless/cfg/: bless.json
plg/bless/res/: bless.html
plg/buy/: buy.py
plg/buy/cfg/: buy.json
plg/buy/res/: buy.html  create_buy.sql  insert_buy.sql  select_buy.sql
plg/buybot/: buybot.py
plg/buybot/cfg/: buybot.json
plg/buybot/res/: buybot.html
plg/cex/: cex.py
plg/cex/cfg/: cex.json
plg/cex/res/: cex.html
plg/chart/: chart.py
plg/chart/cfg/: chart.json
plg/debug/: debug.py
plg/error/: error.py
plg/event/: event.py
plg/feedback/: feedback.py
plg/help/: help.py
plg/logfile/: logfile.py
plg/lottery/: lottery.py
plg/manage/: manage.py
plg/price/: price.py
plg/rain/: rain.py
plg/sell/: sell.py
plg/send/: send.py
plg/shutdown/: shutdown.py
plg/simulate/: simulate.py
plg/start/: start.py
plg/submit/: submit.py
plg/testnet/: testnet.py
plg/tip/: tip.py
plg/tokenomics/: tokenomics.py
plg/tokens/: tokens.py
plg/track/: track.py
plg/trend/: trend.py
plg/update/: update.py
res/: create_wallets.sql  insert_wallet.sql  select_addresses.sql  select_user_id.sql  select_wallet.sql
tests/: test_smoke.py
(+49 files in other folders)
