[tool.poetry]
name = "tg-bot"
version = "0.2.1"
description = ""
authors = ["endogen"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = {extras = ["job-queue"], version = "^21.6"}
requests = "^2.31.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
psutil = "^5.9.8"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
segno = "^1.6.0"
qrcode-artistic = "^3.0.2"
plotly = "^5.18.0"
pytrends = "^4.9.2"
kaleido = "0.2.1"
numpy = "^1.26.4"
xian-py = "^0.2.1"
websockets = "^12.0"
pickledb = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
